Display login page

--- a/Todo.Web/appsettings.json
+++ b/Todo.Web/appsettings.json
@@ -1,28 +1,28 @@
 {
-  "ConnectionStrings": {
-    "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=todo;Initial Catalog=todo;Integrated Security=True",
-    "Mongo": "mongodb://localhost:27017/todo"
-  },
-  "Cookies": {
-    "AccessTokenName": "access_token"
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "Debug": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "ConnectionStrings": {
+        "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=todo;Initial Catalog=todo;Integrated Security=True",
+        "Mongo": "mongodb://localhost:27017/todo"
     },
-    "Console": {
-      "LogLevel": {
-        "Default": "Warning"
-      }
+    "Logging": {
+        "IncludeScopes": false,
+        "Debug": {
+            "LogLevel": {
+                "Default": "Warning"
+            }
+        },
+        "Console": {
+            "LogLevel": {
+                "Default": "Warning"
+            }
+        }
+    },
+    "JwtSecurityToken": {
+        "SigningKey": "YouCannotAlterTokenIfYouCannotHoldThisVeryLongKey",
+        "SigningAlgorithm": "HS256",
+        "Issuer": "http://todo.com",
+        "Audience": "http://todo.com",
+        "ExpireInMinutes": 60,
+        "UseCookie": false,
+        "CookieName": "access_token"
     }
-  },
-  "JwtSecurityToken": {
-    "Key": "YouCannotAlterTokenIfYouCannotHoldThisVeryLongKey",
-    "Issuer": "http://todo.com",
-    "Audience": "http://todo.com",
-    "ExpireInMinutes": 60
-  }
 }
