upgraded to MD 1.4.1; added todo page

--- a/Todo.Web/Todo.Web.csproj
+++ b/Todo.Web/Todo.Web.csproj
@@ -23,6 +23,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\app\services\todo.service.ts" />
+    <None Remove="ClientApp\app\shared\auth-result.model.ts" />
+    <None Remove="ClientApp\app\services\interceptors\url-prefix.interceptor.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Todo.Application\Todo.Application.csproj" />
     <ProjectReference Include="..\Todo.Common\Todo.Common.csproj" />
     <ProjectReference Include="..\Todo.Core\Todo.Core.csproj" />
@@ -38,6 +44,13 @@
   <ItemGroup>
     <Folder Include="logs\" />
     <Folder Include="data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\app\services\todo.service.ts" />
+    <TypeScriptCompile Include="ClientApp\app\shared\auth-result.model.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\interceptors\auth.interceptor.ts" />
+    <TypeScriptCompile Include="ClientApp\app\services\interceptors\url-prefix.interceptor.ts" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
