--- a/Todo.Web/package.json
+++ b/Todo.Web/package.json
@@ -6,34 +6,34 @@
     "test": "karma start ClientApp/test/karma.conf.js"
   },
     "dependencies": {
-        "@angular/animations": "4.2.5",
-        "@angular/common": "4.2.5",
-        "@angular/compiler": "4.2.5",
-        "@angular/compiler-cli": "4.2.5",
-        "@angular/core": "4.2.5",
-        "@angular/forms": "4.2.5",
-        "@angular/http": "4.2.5",
-        "@angular/platform-browser": "4.2.5",
-        "@angular/platform-browser-dynamic": "4.2.5",
-        "@angular/platform-server": "4.2.5",
-        "@angular/router": "4.2.5",
-        "@ngtools/webpack": "1.5.0",
-        "@types/webpack-env": "1.13.0",
+        "@angular/animations": "4.3.6",
+        "@angular/common": "4.3.6",
+        "@angular/common/http": "4.3.6",
+        "@angular/compiler": "4.3.6",
+        "@angular/compiler-cli": "4.3.6",
+        "@angular/core": "4.3.6",
+        "@angular/forms": "4.3.6",
+        "@angular/platform-browser": "4.3.6",
+        "@angular/platform-browser-dynamic": "4.3.6",
+        "@angular/platform-server": "4.3.6",
+        "@angular/router": "4.3.6",
+        "@ngtools/webpack": "1.7.0",
+        "@types/webpack-env": "1.13.1",
         "angular-router-loader": "^0.6",
         "angular2-template-loader": "0.6.2",
         "aspnet-prerendering": "^3.0.1",
         "aspnet-webpack": "^2.0.1",
         "awesome-typescript-loader": "3.2.1",
         "bootstrap": "3.3.7",
-        "chartist": "^0",
+        "chartist": "^0.11",
         "css": "2.2.1",
-        "css-loader": "0.28.4",
+        "css-loader": "0.28.7",
         "es6-shim": "0.35.3",
         "event-source-polyfill": "0.0.9",
         "expose-loader": "0.7.3",
         "extract-text-webpack-plugin": "2.1.2",
         "file-loader": "0.11.2",
-        "html-loader": "0.4.5",
+        "html-loader": "0.5.1",
         "isomorphic-fetch": "2.2.1",
         "jquery": "3.2.1",
         "json-loader": "0.5.4",
@@ -45,10 +45,10 @@
         "to-string-loader": "1.1.5",
         "typescript": "2.4.1",
         "url-loader": "0.5.9",
-        "webpack": "2.5.1",
+        "webpack": "2.7.0",
         "webpack-hot-middleware": "2.18.2",
         "webpack-merge": "4.1.0",
-        "zone.js": "0.8.12"
+        "zone.js": "0.8.17"
     },
   "devDependencies": {
     "@types/chai": "4.0.1",
