--- a/Todo.Web/package.json
+++ b/Todo.Web/package.json
@@ -8,11 +8,11 @@
     "dependencies": {
         "@angular/animations": "4.3.6",
         "@angular/common": "4.3.6",
-        "@angular/common/http": "4.3.6",
         "@angular/compiler": "4.3.6",
         "@angular/compiler-cli": "4.3.6",
         "@angular/core": "4.3.6",
         "@angular/forms": "4.3.6",
+        "@angular/http": "4.3.6",
         "@angular/platform-browser": "4.3.6",
         "@angular/platform-browser-dynamic": "4.3.6",
         "@angular/platform-server": "4.3.6",
@@ -25,6 +25,7 @@
         "aspnet-webpack": "^2.0.1",
         "awesome-typescript-loader": "3.2.1",
         "bootstrap": "3.3.7",
+        "bootstrap-material-design": "^0.5.10",
         "chartist": "^0.11",
         "css": "2.2.1",
         "css-loader": "0.28.7",
@@ -35,7 +36,7 @@
         "file-loader": "0.11.2",
         "html-loader": "0.5.1",
         "isomorphic-fetch": "2.2.1",
-        "jquery": "3.2.1",
+        "jquery": "1.12.4",
         "json-loader": "0.5.4",
         "preboot": "4.5.2",
         "raw-loader": "0.5.1",
