Added Remember Me option.

--- a/Todo.Web/appsettings.json
+++ b/Todo.Web/appsettings.json
@@ -22,6 +22,7 @@
         "Issuer": "http://todo.com",
         "Audience": "http://todo.com",
         "ExpireInMinutes": 60,
+        "RememberMeExpireInDays": 14,
         "UseCookie": false,
         "CookieName": "access_token"
     }
