--- a/Todo.Web/Todo.Web.csproj
+++ b/Todo.Web/Todo.Web.csproj
@@ -10,7 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="NETStandard.AspNet.Identity.MongoDb" Version="1.0.0-rc1" />
-    <PackageReference Include="NLog" Version="5.0.0-beta09" />
+    <PackageReference Include="NLog" Version="5.0.0-beta10" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
